--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
 
         <input type="button" value="Logar" id="btt">
     </div>
+
+    <div>
+        <img src="IMG/painel-espaco-g-frete-gratis-planeta.jpg" alt="">
+        <img src="IMG/2b651c1259c9795ffaac46fd400a2304.jpg" alt="">
+        <img src="IMG/painel-espaco-g-frete-gratis-tema-de-festa-infantil.jpg" alt="">
+    </div>
 </body>
 </html>
